erratic progress